--- a/hugo.toml
+++ b/hugo.toml
@@ -17,6 +17,10 @@ sectionPagesMenu = 'main'
     pageRef = '/about'
     weight = 20
 [[menus.main]]
+    name = 'Tags'
+    pageRef = '/tags'
+    weight = 30
+[[menus.main]]
     name = 'Topics'
     pageRef = '/categories'
     weight = 40
