--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           path: ./public
 
-  # Deployment job
+  # Deployment
   deploy:
     environment:
       name: github-pages
